syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetCustomersInfo (CustomersLookupModel) returns (stream CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}
message CustomersLookupModel {

}
message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	bool isActive = 4;
	int32 age = 5;
}
